# store_api

app/: .pre-commit-config.yaml  Makefile  pyproject.toml
app/store/core/: config.py
app/store/db/: mongo.py
app/store/models/: base.py  product.py
app/store/schemas/: base.py  product.py
app/store/usecases/: product.py
app/tests/: conftest.py  factories.py
app/tests/controllers/: test_product.py
app/tests/schemas/: test_product.py
app/tests/usecases/: test_product.py
